fix css hide google map overflow and move the including position

--- a/css/search.css
+++ b/css/search.css
@@ -2,10 +2,12 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow-y: hidden;
+  overflow-x: hidden;
   font-family: "Microsoft JhengHei";
 }
 #map {
-  height: 100%;
+  height: 100vh;
   visibility: hidden;
 }
 .marker_info{
