--- a/css/set_get_direction.css
+++ b/css/set_get_direction.css
@@ -2,6 +2,8 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow-y: hidden;
+  overflow-x: hidden;
   font-family: "Microsoft JhengHei";
 }
 #map {
